src/renderer/views/About/About.css
.card {
  margin-block: 0 60px;
  margin-inline: auto;
  inline-size: 85%;
}

.brand {
  text-align: center;
}

.logo {
  max-inline-size: 100%;
  inline-size: 500px;
}

.version {
  text-align: center;
  font-size: 2em;
  margin-block-end: 1em;
}

.about-chunks {
  display: grid;
  grid-gap: 16px;
  grid-template-columns: 1fr 1fr;
  margin-inline: auto;
  max-inline-size: 860px;
}

.chunk {
  align-items: start;
  background-color: var(--bg-color);
  border-radius: 8px;
  box-shadow: 0 1px 4px -1px rgb(0 0 0 / 50%);
  display: grid;
  grid-gap: 6px 14px;
  grid-template: 'icon title' auto 'icon content' 1fr / auto 1fr;
  justify-content: start;
  margin: 0;
  padding: 18px;
  word-wrap: break-word;
}

.icon {
  font-size: 24px;
  grid-area: icon;
}

.title {
  grid-area: title;
  margin: 0;
}

.content {
  grid-area: content;
}

@media only screen and (width <=650px) {
  .about-chunks {
    grid-template-columns: 1fr;
  }
}

@media only screen and (width <=680px) {
  .card {
    inline-size: 90%;
  }
}

